--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,16 @@
-﻿[*.cs]
+﻿[*.{cs,vb}]
 
-# Default severity for analyzer diagnostics with category 'Style'
-dotnet_analyzer_diagnostic.category-Style.severity = none
+# IDE0060: 删除未使用的参数
+dotnet_code_quality_unused_parameters = all:none
+
+# IDE0003: 删除限定
+dotnet_style_qualification_for_event = false:none
+
+# IDE0003: 删除限定
+dotnet_style_qualification_for_field = false:none
+
+# IDE0003: 删除限定
+dotnet_style_qualification_for_method = false:none
+
+# IDE0003: 删除限定
+dotnet_style_qualification_for_property = false:none
