--- a/QiQiTemplate/QiQiTemplate.csproj
+++ b/QiQiTemplate/QiQiTemplate.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <PackageOutputPath>./nupkg</PackageOutputPath>
-    <PackageId>qiqigou.QiQiTemplate</PackageId>
+    <PackageId>QiQiTemplate</PackageId>
     <Title>QiQiTemplate</Title>
     <Authors>qiqigou</Authors>
     <Description>基于.Net Core 表达式树实现的模板代码生成器</Description>
