--- a/App/App.csproj
+++ b/App/App.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\QiQiTemplate\QiQiTemplate.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Temp.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
