--- a/QiQiTemplate/QiQiTemplate.csproj
+++ b/QiQiTemplate/QiQiTemplate.csproj
@@ -4,16 +4,19 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <Version>1.0.8</Version>
-    <PackageOutputPath>./nupkg</PackageOutputPath>
+    <PackageOutputPath>nupkg</PackageOutputPath>
     <PackageId>QiQiTemplate</PackageId>
     <Title>QiQiTemplate</Title>
     <Authors>qiqigou</Authors>
     <Description>基于.Net Core 表达式树实现的模板代码生成器</Description>
-    <PackageTags>dotnet-core;template;code generation</PackageTags>
+    <PackageTags>dotnet-core;template</PackageTags>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/qiqigou/QiQiTemplate.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/qiqigou/QiQiTemplate.git</PackageProjectUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Administrator\Desktop\C#Work\QiQiTemplate\QiQiTemplate\QiQiTemplate.xml</DocumentationFile>
+    <DocumentationFile>QiQiTemplate.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
