--- a/App/App.csproj
+++ b/App/App.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="qiqitemplate" Version="1.0.8" />
+    <ProjectReference Include="..\QiQiTemplate\QiQiTemplate.csproj" />
   </ItemGroup>
 
   <ItemGroup>
