--- a/App/App.csproj
+++ b/App/App.csproj
@@ -10,11 +10,26 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Temp.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Update="Folder\allTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Temp.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Update="Folder\data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Folder\eachTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Folder\ifTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Folder\nestedTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Folder\printTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Folder\setTemplate.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
