--- a/QiQiTemplate/QiQiTemplate.csproj
+++ b/QiQiTemplate/QiQiTemplate.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <Version>1.1.3</Version>
-    <PackageOutputPath>E:\nuget</PackageOutputPath>
+    <PackageOutputPath>E:/nuget</PackageOutputPath>
     <PackageId>QiQiTemplate</PackageId>
     <Title>QiQiTemplate</Title>
     <Authors>qiqigou</Authors>
