--- a/QiQiTemplate/QiQiTemplate.csproj
+++ b/QiQiTemplate/QiQiTemplate.csproj
@@ -1,22 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PropertyGroup>
+        <LangVersion>8.0</LangVersion>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
 
-    <Version>1.1.4</Version>
-    <PackageOutputPath>E:/nuget</PackageOutputPath>
-    <PackageId>QiQiTemplate</PackageId>
-    <Title>QiQiTemplate</Title>
-    <Authors>qiqigou</Authors>
-    <Description>基于.Net Core 表达式树实现的模板代码生成器</Description>
-    <PackageTags>dotnet-core;template</PackageTags>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/qiqigou/QiQiTemplate.git</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/qiqigou/QiQiTemplate.git</PackageProjectUrl>
-  </PropertyGroup>
+        <Version>1.1.4</Version>
+        <PackageOutputPath>E:/nuget</PackageOutputPath>
+        <PackageId>QiQiTemplate</PackageId>
+        <Title>QiQiTemplate</Title>
+        <Authors>qiqigou</Authors>
+        <Description>基于.Net Core 表达式树实现的模板代码生成器</Description>
+        <PackageTags>dotnet-core;template</PackageTags>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/qiqigou/QiQiTemplate.git</RepositoryUrl>
+        <PackageProjectUrl>https://github.com/qiqigou/QiQiTemplate.git</PackageProjectUrl>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <IsPackable>true</IsPackable>
+        <OutputType>Library</OutputType>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>QiQiTemplate.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <DocumentationFile>bin/$(Configuration)/$(TargetFramework)/QiQiTemplate.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Text.Json" Version="4.7.2" />
+    </ItemGroup>
 
 </Project>
